src/screen.css
@import "source-serif/source-serif-text.css";
@import "@fontsource/ibm-plex-sans/400.css";
@import "@fontsource/ibm-plex-sans/400-italic.css";


:root {
    --serif-font-stack: "Source Serif", "Apple Garamond", "Baskerville", "Libre Baskerville", "Droid Serif", "Times New Roman", "Times", serif, "Noto Emoji", "Quivira";
    --sans-serif-font-stack: "Source Sans Pro", "Lucida Sans Unicode", "Helvetica", "Trebuchet MS", sans-serif, "Noto Emoji", "Quivira";
    --monospaced-font-stack: "IBM Plex Mono", "Liberation Mono", "Consolas", "Courier", monospace, "Noto Emoji", "Quivira";

    --background-color: #fff;
    --text-color: #000;
    --base-font-size: calc(0.65rem + 0.5vw);
    --prose-max-width: 935px;
    @media all and (max-width: 649px) {
        --line-height: 1.45;
    }
    @media all and (max-width: 999px) {
        --line-height: 1.50;
    }
    @media all and (max-width: 1199px) {
        --line-height: 1.55;
    }
    @media all and (min-width: 1200px) {
        --line-height: 1.60;
        --base-font-size: calc(0.80em + 0.2vw);
    }
}

HTML {
    background-color: var(--background-color);
    color: var(--text-color);
    font-weight: 400;
    font-family: var(--serif-font-stack);
    font-size: var(--base-font-size);
    line-height: var(--line-height);
}

BODY {
    max-width: var(--prose-max-width);
    padding: 0 0.3em;
    margin: 0 auto;

    blockquote.callout-quote {
        position: relative;
        width: fit-content;
        margin: 2em 3em;

        font-style: italic;

        &::before, &::after {
            color: #888;
            position: absolute;
            font-size: 3em;
        }
        &::before {
            content: "\201C";
            left: -1em;
            top: -0.56em;
        }
        &::after {
            content: "\201D";
            right: -1em;
            bottom: -1.12em;
        }
        p:last-of-type {
            text-align: right;
        }

        A.source {
            position: relative;
            padding-left: 0.2em;
            padding-right: 0.2em;
            text-decoration: none;
            background-image: linear-gradient(currentColor, currentColor);
            background-size: 1px 1px;
            background-repeat: repeat-x;
            background-position: 0% 100%;/*calc(100% - 0.1em);*/

            &::before {
                content: " ";
                position: absolute;
                top: 0.4em;
                left: -1px;
                bottom: 0;
                width: 1px;
                height: calc(100% - 0.4em);
                background-image: linear-gradient(currentColor, currentColor);
                background-size: 1px 1px;
                background-repeat: repeat-y;
            }
        }
    }

    BLOCKQUOTE:not(.callout-quote) {
        margin: 1em 0;
        padding: 0.5rem 1.5rem;
        border: 1px solid #bbb;
        background: #f8f8f8;
    }

    PRE {
        padding: 1rem 1.5rem;
        border: 1px solid #bbb;
        background: #f8f8f8;
    }

    CODE:not(PRE CODE) {
        padding: 0.2em 0.4em;
        margin: 0;
        font-size: 85%;
        white-space: break-space;
        background-color: #afb8c133;
    }

    IMG {
        max-width: 100%;
    }

    EM.hightlight {
        background-color: yellow;
        font-style: italic;
        padding: 0.2em;
        border-radius: 0.2em;
    }
}

BUTTON {
    all: unset;
    cursor: pointer;
}

IMG {
    max-width: 100%;
    height: auto;
}

H2 {
    font-size: 1.5rem;
}

ARTICLE {
    HEADER.wide-screen {
        display: none;
    }

    HEADER.narrow-screen {
        display: block;

        .top {
            display: flex;
            flex-direction: row;
            align-items: center;
            gap: 0.5rem;
        }

        NAV {
            UL {
                list-style: none;
                padding: 1rem 0 1rem 0;
                margin: 0 0.5rem;
                font-size: 1.5rem;
                display: flex;
                flex-direction: column;
                gap: 1rem;
            }
        }
        .bar {
            border-style: solid;
            border-color: #555;
            border-width: 1px;
            height: 0;
            margin-bottom: 2rem;
        }
    }

    @media (min-width: 40rem) {
        HEADER.narrow-screen {
            display: none;
        }

        HEADER.wide-screen {
            display: block;
        }
    }
}

.journal-note {
    margin: 1rem 0;
    overflow: hidden;

    border: 1px solid #ddd;
    border-radius: 5px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);

    .header {
        padding: 0;
        margin: 0;
        display: flex;
        flex-direction: column;
        .note-title {
            padding: 0.5rem 1rem;
            border-bottom: 1px solid #eee;
            background-color: #fafafa;
            font-size: 1.2rem;
            text-align: center;
            A {
                text-decoration: none;
                color: #333;
                white-space: nowrap;
            }
        }

        .tags {
            padding: 0.5rem 1rem;
            display: flex;
            flex-wrap: wrap;
            justify-content: center;
            row-gap: 0.5em;
            SPAN {
                white-space: nowrap;
            }
            text-align: center;
            font-weight: 200;
            font-family: var(--monospaced-font-stack);
            font-size: 0.8rem;
            font-style: italic;
            border-bottom: 1px solid #eee;
        }
    }

    .body {
        padding: 0.5rem 1rem;
        transition: max-height 2s;
        max-height: 0;
        &.close {
            overflow-y: hidden;
            max-height: 50em;
        }

        IMG {
            box-shadow: 0 0 5px 0 #777;
            margin: auto;
            display: block;
        }
    }

    .see-more-or-less {
        text-align: center;
        padding: 0.5rem;
        font-size: 0.6em;
    }
}

BODY {
    position: relative;
    .logo {
        display: block;
        filter: grayscale(100%);
        cursor: pointer;
        &:hover {
            filter: none;
        }
    }
    @media all and (min-width: 1100px) {
        .logo {
            margin: 0;
            position: absolute;
            top: 0.5rem;
            left: -3rem;
        }
    }

    A {
        color: #333;
        text-decoration: underline dotted;
        text-underline-offset: 3px;

        &:hover {
            color: #888;
        }
    }
}

.note {
    H1 {
        margin: 0;
        padding: 1rem 0;
        @media all and (min-width: 1100px) {
            padding: 2rem 0;
        }
        text-align: center;
        line-height: 1.15;
        text-transform: none;
        font-variant-caps: small-caps;
        font-size: 2.5em;
        font-weight: 600;
        letter-spacing: -1px;
    }

    .tags {
        margin: 0 auto;
        padding: 0;
        list-style: none;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        gap: 0.5rem;
        font-weight: 400;
        font-family: var(--monospaced-font-stack);
        font-size: calc((16/20) * var(--base-font-size));
        font-style: italic;
        A {
            text-decoration: none;
        }
    }

    .datetime {
        text-align: center;
        font-weight: 400;
        font-size: calc((16/20) * var(--base-font-size));
        font-style: italic;
    }

    .body {
        margin: 2rem 0;
        P {
            text-align: justify;
            hyphens: auto;
        }

        IMG {
            box-shadow: 0 0 5px 0 #777;
            margin: auto;
            display: block;
        }
    }
}

.zen-mode {
    .action-button {
        font-size: calc((16/20) * var(--base-font-size));
        border: 1px dotted #999;
        padding: 0.5em 1em;
        color: #aaa;
        text-decoration: none;

        &:hover {
            color: #333;
            border-color: #666;
            border-style: solid;
            box-shadow: 0 0 0 1px #fff inset, 0 0 0 2px #666 inset;
        }
    }
}

/* typographic separator ornament */
hr.ornament {
    position: relative;
    display: flex;
    margin: 3rem 0;
    border: 0;
}
hr.ornament::after {
    margin: auto;
    content: "";
    border: 1px solid #ccc;
    width: 2em;
    height: 2em;
    background-color: white;
    background-image: none;
    z-index: 1;
    box-shadow:
        0 0 0 calc(0.5em - 1px) white inset,
        0 0 0 0.5em #ccc inset;
    filter: none;
    opacity: 1.0;
}
hr.ornament::before {
    content: "";
    position: absolute;
    height: 1px;
    background-color: #ccc;
    width: 100%;
    top: 50%;
}

